ENG-459 – Fixed scrolling for contrast-grid

--- a/scss/blocks/tokens.scss
+++ b/scss/blocks/tokens.scss
@@ -729,8 +729,14 @@ a.custom-property-link {
   }
 
   .grid--header-row {
-    overflow: hidden;
+    overflow: auto;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
     font-weight: var(--fontWeightBold);
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     .cell {
       height: auto;
